# archimedic

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  demo.py  docker-compose-dev.yml  docker-compose.yml  mypy.ini  pyproject.toml  sample.env
api/: cli.py  main.py
archimedic/: config.py  data.py  model.py  preprocess.py  transformer.py  utils.py
archimedic/lab/: EDA.ipynb  literature_review.ipynb
scripts/: build-push.sh  build-run.sh  build.sh  format-imports.sh  format.sh  lint.sh  start-reload.sh  start.sh  test-cov-html.sh  test.sh  train.sh
tests/: test_archimedic.py
