[tool.poetry]
name = "archimedic"
version = "0.1.0"
description = ""
authors = ["Chris Dare <engineering@chrisdare.me>"]

[tool.poetry.dependencies]
python = "^3.10"
joblib = "^1.3.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
scikit-learn = "^1.4.0"
spacy = "^3.7.2"
typer = "^0.9.0"
Janitor = "^0.1.1"
fastapi = "^0.109.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
uvicorn = "^0.27.0.post1"
cachesql = "^0.3.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.1"
pytest = "^5.2"
black = "^24.1.1"
coverage = "^7.4.1"
jupyter = "^1.0.0"
streamlit = "^1.30.0"
ipython = "^8.20.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.isort]
profile = "black"
known_third_party = ["archimedic", "janitor"]
skip_glob = []


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
